--- a/apps/demo/src/index.html
+++ b/apps/demo/src/index.html
@@ -14,6 +14,16 @@
 </head>
 <body>
   <main>
+    <!-- Logo Loader Demo -->
+    <section class="logo-demo">
+      <ease-logo-loader id="demo-logo" size="48"></ease-logo-loader>
+      <div class="logo-controls">
+        <button id="btn-intro-wave" type="button">Intro: Wave</button>
+        <button id="btn-intro-particle" type="button">Intro: Particle</button>
+        <button id="btn-loading-toggle" type="button">Toggle Loading</button>
+      </div>
+    </section>
+
     <!-- Example 1: Basic state with button actions -->
     <ease-state>
       <span slot="headline">Overview</span>
